--- a/setup.yml
+++ b/setup.yml
@@ -1,13 +1,17 @@
 ---
 # Run playbooks for MVP 
 
-- import_playbook: playbooks/ansible_pipeline.yml
-  vars:
-    client_name: "qa"
+#- import_playbook: playbooks/build_ansible_host.yml
+#  vars:
+#    example_var-1: "none"
 
-- import_playbook: playbooks/build_ansible_host.yml
-  vars:
-    client_name: "qa"
+#- import_playbook: playbooks/packer_dvi.yml
+#  vars:
+#    example_var-2: "none"
+
+#- import_playbook: playbooks/triggerPosh.yml
+#  vars:
+#    example_var-3: "none"
 
 ...
 
