--- a/playbooks/packer_vdi.yml
+++ b/playbooks/packer_vdi.yml
@@ -5,6 +5,6 @@
 
   tasks: 
     - name: " Packer build "
-      command: packer build ../roles/ansible-packer-role/files/.json
+      command: packer build templates/vdi_build.json
 
 ...
