--- a/playbooks/build_ansible_host.yml
+++ b/playbooks/build_ansible_host.yml
@@ -8,7 +8,7 @@
     - name: " Install the latest packages and dependencies "
       dnf:
         name: 
-          - python-pip3
+          - python3-pip
         #enablerepo: https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo
         state: latest
 
