--- a/playbooks/build_ansible_host.yml
+++ b/playbooks/build_ansible_host.yml
@@ -9,6 +9,8 @@
       dnf:
         name: 
           - python3-pip
+          - python3-devel
+          - gcc
         #enablerepo: https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo
         state: latest
 
