--- a/playbooks/build_ansible_host.yml
+++ b/playbooks/build_ansible_host.yml
@@ -11,6 +11,8 @@
           - python3-pip
           - python3-devel
           - gcc
+          - postfix
+          - mailx
         #enablerepo: https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo
         state: latest
 
