--- a/playbooks/triggerPosh.yml
+++ b/playbooks/triggerPosh.yml
@@ -7,7 +7,7 @@
       # This will convert all Powershell scripts from /templates folder into Powershell scripts and move them to /scripts folder
     - name: "Convert powershell scripts from jinja2 template"
       template:
-        src: /templates/{{ item.j2 }}
+        src: ../templates/{{ item.j2 }}
         dest: c:\{{ item.posh }}
       loop:
         - { j2: 'Connect-AztoCitrixHostConnection.j2', posh: 'Connect-AztoCitrixHostConnection.ps1' }
