--- a/inventory/citrixWVD.azure_rm.yml
+++ b/inventory/citrixWVD.azure_rm.yml
@@ -1,5 +1,5 @@
 plugin: azure.azcollection.azure_rm
-auth_source: cli
+auth_source: msi
 
 # fetches VMs from an explicit list of resource groups instead of default all (- '*')
 include_vm_resource_groups:
