--- a/playbooks/bakeVDI.yml
+++ b/playbooks/bakeVDI.yml
@@ -4,7 +4,7 @@
 - hosts: localhost
 
   tasks: 
-    - include_vars: ../inventory/hosts.yml
+    - include_vars: ../inventory/hosts.yaml
     - name: " Convert Powershell scripts from jinja2 template "
       template:
         src: ../templates/vdi_build.j2
