--- a/playbooks/citrixcloudhosting.yml
+++ b/playbooks/citrixcloudhosting.yml
@@ -1,51 +1,14 @@
 ---
-- hosts: all 
-  gather_facts: no
-  tasks:
-  - name: Install AD Powershell Module
-    win_feature:
-      name:  RSAT-AD-PowerShell
-      state: present
-  
-  - name: Install IIS (Web-Server only)
-    win_feature:
-      name: Web-Server
-      state: present
-  
-  - name: Install Web ASP
-    win_feature:
-      name:  Web-Asp-Net45
-      state: present
 
-  - name: Install Web Console
-    win_feature:
-      name:  Web-Mgmt-Console
-      state: present
-  
-  - name: Copy Cloud Connector DSC Module
-    ansible.windows.win_copy:
-      src: files/CloudConnector
-      dest: C:\Windows\System32\WindowsPowerShell\v1.0\Modules
-  
-  - name: Desable IE Security for Administrators
-    ansible.windows.win_regedit:
-      path: HKLM:\SOFTWARE\Microsoft\Active Setup\Installed Components\{A509B1A7-37EF-4b3f-8CFC-4F3A74704073}
-      name: IsInstalled
-      data: 0
-      type: dword
-  
-  - name: Desable IE Security for users
-    ansible.windows.win_regedit:
-      path: HKLM:\SOFTWARE\Microsoft\Active Setup\Installed Components\{A509B1A8-37EF-4b3f-8CFC-4F3A74704073}
-      name: IsInstalled
-      data: 0
-      type: dword
- 
-  - name: Install Cloud Connector and register in Citrix Cloud
-    ansible.windows.win_dsc:
-      resource_name:  CloudConnector
-      CustomerId: "{{  }}"
-      APIClientID:  "{{  }}"
-      APIClientSecret:  "{{  }}"
-      ResourceLocation: "{{  }}"
-      ConnectorDowloadPath: c:\
+- hosts: 'entisyscc1' 
+
+  tasks:
+      # This will convert all Powershell script
+    - name: "Convert powershell scripts from jinja2 template"
+      template:
+        src: '../templates/Connect-AztoCitrixHostConnection.j2'
+        dest: 'c:\Connect-AztoCitrixHostConnection.ps1'
+
+      # Running Script 1: Connect-AztoCitrixHostConnection.ps1
+    - name: "Connect-AztoCitrixHostConnection.ps1"
+      win_shell: Connect-AztoCitrixHostConnection.ps1 >> C:\somelog.txt
