--- a/playbooks/test.yml
+++ b/playbooks/test.yml
@@ -1,6 +1,6 @@
 ---
 
-- hosts: 'windows' 
+- hosts: 'entisyscc1' 
 
   tasks:
       # This will convert all Powershell scripts from /templates folder into Powershell scripts and move them to /scripts folder
@@ -10,6 +10,5 @@
         src: '../templates/test.j2'
         dest: 'c:\Connect-AztoCitrixHostConnection.ps1'
 
-      # Running Script 1: Connect-AztoCitrixHostConnection.ps1
-    - name: "Connect-AztoCitrixHostConnection.ps1"
-      ansible.windows.win_shell: c:\Connect-AztoCitrixHostConnection.ps1 >> C:\somelog.txt
+    - name: "awdadadawda wdaw da wd adwtest" 
+      win_shell: c:\Connect-AztoCitrixHostConnection.ps1  >> C:\somelog.txt
