--- a/playbooks/dyntest.yml
+++ b/playbooks/dyntest.yml
@@ -2,6 +2,8 @@
 
 - hosts: e360cc_hosts 
 
+  plugin: azure.azcollection.azure_rm
+
   tasks:
     - name: " List in Win shell "
       win_shell: dir
