Theres an issue with vars the last task of cloudconnector.yml playbook.I created a backup of original. Also, task still fails on the powershell side. Look at errors log for more details.

--- a/inventory/testInventory.ini
+++ b/inventory/testInventory.ini
@@ -1,7 +1,7 @@
-[win]
+[entisyscc1]
 192.168.1.5
 
-[win:vars]
+[entisyscc1:vars]
 ansible_user='superadmin'
 ansible_password='rit123ABC!@#$%^'
 ansible_connection=winrm
