--- a/playbooks/bakeVDI.yml
+++ b/playbooks/bakeVDI.yml
@@ -2,16 +2,31 @@
 # Run Packer build to prepare VDI image
 
 - hosts: localhost
+  vars:
+    packerProjectPath: "/opt/packer/vdi"
 
   tasks: 
     - include_vars: ../inventory/hosts.yaml
     - name: " Convert Powershell scripts from jinja2 template "
       template:
         src: ../templates/vdi_build.j2
-        dest: ../scripts/vdi_build.json
+        dest: {{ packerProjectPath }}/vdi_build.json
 
- #   - name: " Packer build "
- #     command: packer build ../scripts/vdi_build.json
+    - name: " Copy vdi scripts to {{ packerProjectPath }} "
+      copy:
+        src: ../scripts/{{ item }}
+        dest: {{ packerProjectPath }}/scripts/
+      with_items:
+      - baseline_features.ps1
+      - baseline_svc.ps1
+      - installs.ps1
+      - vda.ps1
+      - vdi.ps1
+
+    - name: " Packer build "
+      command: packer build vdi_build.json
+      args:
+        chdir: {{ packerProjectPath }}/
 
 ...
 
