--- a/playbooks/bakeVDI.yml
+++ b/playbooks/bakeVDI.yml
@@ -2,20 +2,29 @@
 # Run Packer build to prepare VDI image
 
 - hosts: localhost
+  become: yes
   vars:
     packerProjectPath: "/opt/packer/vdi"
 
   tasks: 
-    - include_vars: ../inventory/hosts.yaml
-    - name: " Convert Powershell scripts from jinja2 template "
-      template:
-        src: ../templates/vdi_build.j2
-        dest: {{ packerProjectPath }}/vdi_build.json
+#   - include_vars: ../inventory/hosts.yaml
+
+    - name: " Create Packer execution directory "
+      file:
+        path: "{{ packerProjectPath }}"
+        group: adm
+        mode: '775'
+        state: directory
+
+#   - name: " Convert Powershell scripts from jinja2 template "
+#     template:
+#       src: ../templates/vdi_build.j2
+#       dest: {{ packerProjectPath }}/vdi_build.json
 
     - name: " Copy vdi scripts to {{ packerProjectPath }} "
       copy:
         src: ../scripts/{{ item }}
-        dest: {{ packerProjectPath }}/scripts/
+        dest: "{{ packerProjectPath }}/scripts/"
       with_items:
       - baseline_features.ps1
       - baseline_svc.ps1
@@ -26,7 +35,7 @@
     - name: " Packer build "
       command: packer build vdi_build.json
       args:
-        chdir: {{ packerProjectPath }}/
+        chdir: "{{ packerProjectPath }}/"
 
 ...
 
