--- a/playbooks/bakeVDI.yml
+++ b/playbooks/bakeVDI.yml
@@ -22,7 +22,7 @@
     - name: " Convert Powershell scripts from jinja2 template "
       template:
         src: ../templates/vdi_build.j2
-        dest: {{ packerProjectPath }}/vdi_build.json
+        dest: "{{ packerProjectPath }}/vdi_build.json"
 
     - name: " Copy vdi scripts to {{ packerProjectPath }} "
       copy:
